@@ -27,6 +27,8 @@
 - TCP proxy functionality
 - Improved "Alarm Details" view in management console
 - Added support for agent actions defined in external subagents
+- TCP listener can be disabled in agent configuration file
+- Push connector can be disabled in agent configuration file
 - Fixed issues:
 	NX-993 (Windows installer should honor current state of services during upgrade)
 	NX-1438 (Increase debug level for thread pool messages)
